--- a/Day 1/Day1.html
+++ b/Day 1/Day1.html
@@ -21,7 +21,7 @@
     </header>
     
     <main>
-<section class="section-home">
+<section class="section-home ">
     <div>
         <h1>This is the website of 90 day code challenge </h1>
         <p></p>
@@ -31,7 +31,31 @@
 
 
     <div id="Calculator">
-        <h1>this is calculator</h1>
+        <h1>Calculator App</h1>
+
+        <div class="cal-container">
+            <span class="display" id="display" disabled placeholder="0">0</span>
+            <hr>
+            <div class="cal-buttons">
+              <button value="1" class="btn clear" value="c"> C </button>
+                    <button  value="/" class="btn"onclick="appendOperation('/')"> / </button>
+                    <button value="%" class="btn"onclick="appendOperation('%')"> % </button>
+                    <button value="." class="btn"> . </button>
+                    <button  value="7"onclick="appendNumber(7)" class="btn"> 7 </button>
+                    <button value="8"onclick="appendNumber(8)" class="btn"> 8 </button>
+                    <button value="9 "onclick="appendNumber(9)" class="btn"> 9 </button>
+                    <button value="*" class="btn" onclick="appendOperation('*')"> * </button>
+                    <button value="4"onclick="appendNumber(4)" class="btn"> 4 </button>
+                    <button value="5"onclick="appendNumber(5)" class="btn">  5</button>
+                <button value="6" class="btn" onclick="appendNumber(3)"> 6 </button>
+                <button value="-" class="btn"onclick="appendOperation('-')"> - </button>
+                <button value="1" onclick="appendNumber(1)"class="btn"> 1 </button>
+                <button value="2" onclick="appendNumber(2)"class="btn"> 2 </button>
+                <button value="3" onclick="appendNumber(3)"class="btn "> 3 </button>
+                <button value="+" class="btn add-btn" onclick="appendOperation('+')"> + </button>
+                <button value="0" class="btn" onclick="appendNumber(0)"> 0 </button>
+                <button value="=" class="btn equal-btn" onclick="appendOperation('=')"> = </button>
+        </div>
     </div>
 </section>
 
@@ -58,4 +82,5 @@
         </div>
     </footer>
 </body>
+    <script src="Script.js"></script> 
 </html>
