--- a/Day 1/Day1.html
+++ b/Day 1/Day1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAY ONE</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
@@ -34,27 +34,31 @@
         <h1>Calculator App</h1>
 
         <div class="cal-container">
-            <span class="display" id="display" disabled placeholder="0">0</span>
+            <input type="text" name=""  class="display" id="display" style="padding: 10px; width: 100%; background-color: transparent; border: none;" disabled >
             <hr>
             <div class="cal-buttons">
-              <button value="1" class="btn clear" value="c"> C </button>
-                    <button  value="/" class="btn"onclick="appendOperation('/')"> / </button>
-                    <button value="%" class="btn"onclick="appendOperation('%')"> % </button>
-                    <button value="." class="btn"> . </button>
-                    <button  value="7"onclick="appendNumber(7)" class="btn"> 7 </button>
-                    <button value="8"onclick="appendNumber(8)" class="btn"> 8 </button>
-                    <button value="9 "onclick="appendNumber(9)" class="btn"> 9 </button>
-                    <button value="*" class="btn" onclick="appendOperation('*')"> * </button>
-                    <button value="4"onclick="appendNumber(4)" class="btn"> 4 </button>
-                    <button value="5"onclick="appendNumber(5)" class="btn">  5</button>
-                <button value="6" class="btn" onclick="appendNumber(3)"> 6 </button>
-                <button value="-" class="btn"onclick="appendOperation('-')"> - </button>
-                <button value="1" onclick="appendNumber(1)"class="btn"> 1 </button>
-                <button value="2" onclick="appendNumber(2)"class="btn"> 2 </button>
-                <button value="3" onclick="appendNumber(3)"class="btn "> 3 </button>
-                <button value="+" class="btn add-btn" onclick="appendOperation('+')"> + </button>
-                <button value="0" class="btn" onclick="appendNumber(0)"> 0 </button>
-                <button value="=" class="btn equal-btn" onclick="appendOperation('=')"> = </button>
+            <button class="btn">C </button>
+            <button class="btn">/</button>
+            <button class="btn">.</button>
+            <button class="btn">-</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">+</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">* </button>
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">=</button>
+            <button class="btn">0</button>
+            <button class="btn">00</button>
+            <button class="btn">AC</button>
+
+
+
         </div>
     </div>
 </section>
@@ -82,5 +86,6 @@
         </div>
     </footer>
 </body>
-    <script src="Script.js"></script> 
+    <script src="script.js">
+</script>
 </html>
